--- a/css/custom.css
+++ b/css/custom.css
@@ -107,3 +107,10 @@ h2 {
     color: #074734;
     font-family: 'Mynerve';
 }
+
+.center-items {
+    display: flex; /* 1. Enable Flex context */
+    align-items: center; /* 2. Vertically center the child(ren) */
+    flex-direction: column; /* 3. (Optional) If you need horizontal centering too */
+    height: 100vh; /* 4. Parent must have a defined height */
+}
