make responsive and change colors

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,7 +7,7 @@ $grid-gutter-width: 40px !default;
 $border-radius-base:  4px !default;
 $padding-base-vertical: 14px !default;
 
-$brand-primary: #012d35cc !default;
+$brand-primary: #1d425d !default;
 $brand-secondary: #118DF0 !default; 
 
 $brand-white: #fff;
@@ -111,7 +111,7 @@ body {
 	font-weight: 400;
 	font-size: 16px;
 	line-height: 1.7;
-	color: #012d35cc;
+	color: #1d425d;
 	background: #fff;
 }
 #page {
@@ -1174,7 +1174,7 @@ form {
 	p {
 		font-size: 18px;
 		line-height: 1.5;
-		color: #012d35cc;
+		color: #1d425d;
 	}
 	span{
 		text-transform: uppercase;
