--- a/css/custom.css
+++ b/css/custom.css
@@ -19,6 +19,11 @@ html{scroll-behavior:smooth}
     margin-bottom: 3em !important;
 }
 
+.family-names {
+    margin-top: 20px;  
+    margin-bottom: 30px;
+}
+
 .family-names h2 {
     font-family: 'miama', 'serif' !important;
     font-size: 3em !important;
@@ -39,6 +44,10 @@ html{scroll-behavior:smooth}
     font-family: 'serif' !important;
 }
 
+.standard-font {
+    font-family: 'serif' !important;
+}
+
 #coming option {
     color: black !important;
 }
@@ -52,13 +61,68 @@ html{scroll-behavior:smooth}
     background-color: #012d35cc !important;
 }
 
+.church {
+    margin-top: 20px;
+}
+
+.main-dates {
+    margin-top: 20px;
+}
+
 @media screen and (max-width: 900px) {
     .main-names {
       font-size: 3em !important;
     }
 
     .fh5co-nav #fh5co-logo {
-        font-size: 0.5em;
+        font-size: 0.5em !important;
+    }
+
+    .main-names {
+        font-family: 'Mansalva', 'serif' !important;
+        font-size: 3em !important;
+    }
+
+    .strong-dt {
+        font-size: 1.1em !important;;
+    }
+
+    .light-dt {
+        font-size: 0.9em !important;;
+    }
+
+    .simply-countdown {
+        transform: scale(0.7) !important;
+            margin-bottom: 0em !important;
+    }
+
+    .family-names {
+        margin-top: 0px !important;  
+        margin-bottom: 0px !important;
+        font-size: 0.95em !important;
+    }
+
+    .family-names h2 {
+        font-family: 'miama', 'serif' !important;
+        font-size: 2.7em !important;
+    }
+
+    .church {
+        margin-top: 10px;
+        font-size: 0.8em !important;
+    }
+
+    hr {
+        margin-top: 15px !important;
+        margin-bottom: 5px !important;
+    }
+
+    .main-dates {
+        margin-top: 10px !important;
+    }
+
+    .center-items {
+        align-items: center !important;
     }
 }
 @media screen and (max-width: 480px) {
@@ -68,6 +132,11 @@ html{scroll-behavior:smooth}
 
     .fh5co-nav #fh5co-logo {
         font-size: 1.5em;
+    }
+
+    .main-names {
+        font-family: 'Mansalva', 'serif' !important;
+        font-size: 2em !important;
     }
 }
 
@@ -95,16 +164,16 @@ h2 {
 }
 
 .strong-dt {
-    font-size: 28px;
+    font-size: 1.5em;
     font-weight:bolder;
-    color: #074734;
+    color: #1d425d;
     font-family: 'Mansalva';
 }
 
 .light-dt {
-    font-size: 20px;
+    font-size: 1.2em;
     font-weight: bolder;
-    color: #074734;
+    color: #1d425d;
     font-family: 'Mynerve';
 }
 
