--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.7;
-  color: #012d35cc;
+  color: #1d425d;
   background: #fff;
 }
 
@@ -50,13 +50,13 @@ body {
 }
 
 a {
-  color: #012d35cc;
+  color: #1d425d;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
   transition: 0.5s;
 }
 a:hover, a:active, a:focus {
-  color: #012d35cc;
+  color: #1d425d;
   outline: none;
   text-decoration: none;
 }
@@ -74,17 +74,17 @@ h1, h2, h3, h4, h5, h6, figure {
 
 ::-webkit-selection {
   color: #fff;
-  background: #012d35cc;
+  background: #1d425d;
 }
 
 ::-moz-selection {
   color: #fff;
-  background: #012d35cc;
+  background: #1d425d;
 }
 
 ::selection {
   color: #fff;
-  background: #012d35cc;
+  background: #1d425d;
 }
 
 .fh5co-nav {
@@ -204,7 +204,7 @@ h1, h2, h3, h4, h5, h6, figure {
   color: #fff;
 }
 .fh5co-nav ul li.btn-cta a {
-  color: #012d35cc;
+  color: #1d425d;
 }
 .fh5co-nav ul li.btn-cta a span {
   background: #fff;
@@ -318,7 +318,7 @@ h1, h2, h3, h4, h5, h6, figure {
   top: 0;
   left: 0;
   right: 0;
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(15, 65, 90, 0.25);
 }
 .fh5co-cover > .fh5co-container {
   position: relative;
@@ -394,7 +394,7 @@ h1, h2, h3, h4, h5, h6, figure {
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.4);
+  background: rgb(14 26 28 / 36%);
 }
 @media screen and (max-width: 900px) {
   #fh5co-counter,
@@ -777,7 +777,7 @@ h1, h2, h3, h4, h5, h6, figure {
   display: inline-block;
   zoom: 1;
   *display: inline;
-  color: #012d35cc;
+  color: #1d425d;
   padding-left: 10px;
   padding-right: 10px;
 }
@@ -796,7 +796,7 @@ h1, h2, h3, h4, h5, h6, figure {
   position: relative;
 }
 .fh5co-contact-info ul li:before {
-  color: #012d35cc;
+  color: #1d425d;
   position: absolute;
   left: 0;
   top: .05em;
@@ -888,7 +888,7 @@ form label {
 .fh5co-cover .display-tc .btn {
   padding: 15px 20px;
   background: #fff !important;
-  color: #012d35cc;
+  color: #1d425d;
   border: none !important;
   font-size: 14px;
   text-transform: uppercase;
@@ -951,7 +951,7 @@ form label {
   display: inline-block;
   width: 100px;
   height: 100px;
-  background: rgba(1, 45, 53, 0.8);
+  background: rgba(29, 66, 93, 0.8);
   margin: 0 4px;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
@@ -1052,7 +1052,7 @@ form label {
   font-size: 20px;
   background: #fff;
   padding: 20px;
-  color: #012d35cc;
+  color: #1d425d;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
@@ -1075,7 +1075,7 @@ form label {
 }
 .couple-half h3 {
   font-family: "Sacramento", Arial, serif;
-  color: #012d35cc;
+  color: #1d425d;
   font-size: 30px;
 }
 .couple-half .groom, .couple-half .bride {
@@ -1168,7 +1168,7 @@ form label {
   height: 90px;
   font-size: 40px;
   line-height: 40px;
-  color: #012d35cc;
+  color: #1d425d;
 }
 .feature-center p, .feature-center h3 {
   margin-bottom: 30px;
@@ -1190,7 +1190,7 @@ form label {
   margin-bottom: 10px;
   line-height: 1.5;
   font-weight: bold;
-  color: #012d35cc;
+  color: #1d425d;
   font-family: "Sacramento", Arial, serif;
 }
 @media screen and (max-width: 900px) {
@@ -1201,7 +1201,7 @@ form label {
 .fh5co-heading p {
   font-size: 18px;
   line-height: 1.5;
-  color: #012d35cc;
+  color: #1d425d;
 }
 .fh5co-heading span {
   text-transform: uppercase;
@@ -1225,7 +1225,7 @@ form label {
   display: block;
 }
 #fh5co-testimonial .wrap-testimony .testimony-slide span a.twitter {
-  color: #012d35cc;
+  color: #1d425d;
   font-weight: 300;
 }
 #fh5co-testimonial .wrap-testimony .testimony-slide figure {
@@ -1317,7 +1317,7 @@ form label {
   display: table-cell;
   vertical-align: middle;
   font-size: 30px;
-  color: #012d35cc;
+  color: #1d425d;
 }
 .feature-left .feature-copy {
   float: left;
@@ -1383,7 +1383,7 @@ form label {
 #fh5co-started .btn {
   height: 54px;
   border: none !important;
-  background: #012d35cc;
+  background: #1d425d;
   color: #fff;
   font-size: 16px;
   text-transform: uppercase;
@@ -1427,7 +1427,7 @@ form label {
 }
 .owl-carousel .owl-controls .owl-dot.active span {
   background: transparent;
-  border: 2px solid #012d35cc;
+  border: 2px solid #1d425d;
 }
 
 #fh5co-offcanvas {
@@ -1680,9 +1680,9 @@ form label {
 }
 
 .btn-primary {
-  background: #012d35cc;
+  background: #1d425d;
   color: #fff;
-  border: 2px solid #012d35cc;
+  border: 2px solid #1d425d;
 }
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active {
   background: #025361cc !important;
@@ -1690,11 +1690,11 @@ form label {
 }
 .btn-primary.btn-outline {
   background: transparent;
-  color: #012d35cc;
-  border: 2px solid #012d35cc;
+  color: #1d425d;
+  border: 2px solid #1d425d;
 }
 .btn-primary.btn-outline:hover, .btn-primary.btn-outline:focus, .btn-primary.btn-outline:active {
-  background: #012d35cc;
+  background: #1d425d;
   color: #fff;
 }
 
@@ -1824,7 +1824,7 @@ form label {
 .form-control:active, .form-control:focus {
   outline: none;
   box-shadow: none;
-  border-color: #012d35cc;
+  border-color: #1d425d;
 }
 
 .row-pb-md {
